# Nuclear-mass-predictions-based-on-CNN

./: .gitignore  CNN-I3.py  CNN-I4.py  CNN-WS4.py  LICENSE  README.md  WS4.txt  cnn_i3_best_model.pt  cnn_i3_model.pt  cnn_i3_model_1000_epochs.pt  cnn_i4_best_model.pt  config.yaml  coses_esborrades.py  data_cleaned.csv  data_extraction.py  data_processing.py  extracting_2016.py  extracting_data.py  models.py  multiple_scripts.py  multiple_training_runnings.py  new_nuclei_testing.py  prova.py  pyproject.toml  requirements.txt  utils.py
CNN-I3 experiments learning rates/: cnn_I3_best_model_1e-05.pt  cnn_I3_best_model_5e-05.pt  cnn_i3_best_model_0.0001.pt  cnn_i3_best_model_0.0005.pt  cnn_i3_best_model_0.001.pt  cnn_i3_best_model_0.002.pt  cnn_i3_best_model_0.005.pt  cnn_i3_best_model_0.01.pt  cnn_i3_best_model_0.05.pt  cnn_i3_best_model_0.1.pt  cnn_i3_best_model_0.5.pt  cnn_i3_best_model_1e-05.pt  cnn_i3_best_model_5e-05.pt  training_logs_I3.txt  training_results_I3.txt
CNN-I3 results/: cnn_i3_best_model.pt  cnn_i3_best_model_.pt  cnn_i3_best_model_0.0001.pt  cnn_i3_best_model_0.0005.pt  cnn_i3_best_model_0.001.pt  cnn_i3_best_model_0.002.pt  cnn_i3_best_model_0.005.pt  cnn_i3_best_model_0.01.pt  cnn_i3_best_model_0.05.pt  cnn_i3_best_model_0.1.pt  cnn_i3_best_model_0.5.pt  cnn_i3_best_model_1e-05.pt  cnn_i3_best_model_5e-05.pt  training_results.txt  training_results_I3.txt
CNN-I4 experiments learning rates/: cnn_I4_best_model_1e-05.pt  cnn_I4_best_model_5e-05.pt  cnn_i4_best_model_0.0001.pt  cnn_i4_best_model_0.0005.pt  cnn_i4_best_model_0.001.pt  training_logs_I4.txt  (+7 more)
(+65 files in other folders)
